--- a/app/views/users/_post_summary.html.erb
+++ b/app/views/users/_post_summary.html.erb
@@ -4,6 +4,7 @@
       <%= link_to(sanitize("<b>#{user.artists.length == 1 ? 'Artwork' : artist.name}</b>"), posts_path(tags: artist.name)) %>
     </h2>
     <span class="box-extra">
+      <%= link_to(sanitize("<b>#{artist.post_count} total</b>"), favorites_path(user_id: user.id)) %>
       <%= link_to(sanitize("<b>Comments</b>"), comments_path(group_by: "comment", search: { post_tags_match: artist.name })) %>
     </span>
     <div class="box-posts">
@@ -24,9 +25,9 @@
       <%= link_to(sanitize("<b>#{user.post_deleted_count} deleted</b>"), deleted_posts_path(user_id: user.id)) %>
       <%= link_to(sanitize("<b>#{user.own_post_replaced_count} replaced</b>"), post_replacements_path(search: { uploader_id_on_approve: user.id })) %>
       <%= link_to(sanitize("<b>#{user.post_replacement_rejected_count} rejected</b>"), post_replacements_path(search: { creator_id: user.id, status: "rejected" })) %>
+      <%= link_to_if(PostVotePolicy.new(CurrentUser.user, presenter).index?, sanitize("<b>#{user.post_vote_count} Votes</b>"), { controller: "posts/votes", search: { user_name: user.name } }) { "" } %>
       <span class="spacer"></span>
       <%= link_to(sanitize("<b>Comments</b>"), comments_path(group_by: "comment", search: { poster_id: user.id })) %>
-      <%= link_to_if(PostVotePolicy.new(CurrentUser.user, presenter).index?, sanitize("<b>Votes</b>"), { controller: "posts/votes", search: { user_name: user.name } }) { "" } %>
     </span>
     <div class="box-posts">
       <% presenter.uploads.each do |post| %>
