--- a/app/javascript/src/styles/specific/dmails.scss
+++ b/app/javascript/src/styles/specific/dmails.scss
@@ -1,5 +1,5 @@
 div#c-dmails {
-  tr[data-is-read=false] {
+  tr[data-is-read=false]:not([data-is-owner=false]) {
     font-weight: bold;
     background-color: var(--color-section-lighten-10);
   }
