fix framecount search/order

--- a/app/javascript/src/javascripts/autocomplete.js.erb
+++ b/app/javascript/src/javascripts/autocomplete.js.erb
@@ -74,6 +74,7 @@ Autocomplete.initialize_tag_autocomplete = function() {
       case "score":
       case "duration":
       case "favcount":
+      case "framecount":
       case "filesize":
       case "source":
       case "id":
