Add views to opensearch index These are pulled and updated hourly (or on post update) to hopefully alleviate any potential performance issues
Since we now have a clickhouse connection here, we may be looking at moving most of the querying logic into the rails application rather than using internal endpoints

--- a/app/javascript/src/javascripts/autocomplete.js.erb
+++ b/app/javascript/src/javascripts/autocomplete.js.erb
@@ -75,6 +75,7 @@ Autocomplete.initialize_tag_autocomplete = function() {
       case "duration":
       case "favcount":
       case "framecount":
+      case "views":
       case "filesize":
       case "source":
       case "id":
