--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -2,26 +2,15 @@
 
 <%= custom_form_for(@user, url: admin_user_path(@user), method: :patch, policy: policy([:admin, @user])) do |f| %>
   <%= f.input(:id, as: :hidden) %>
-  <%= f.input(:name, policy: OverwritePolicy.new(true), input_html: { size: 50 }) %>
-  <%= f.input(:force_name_change, collection: [["Yes", true], ["No", false]], label: "Force Name Change") %>
+  <%= f.input(:name, input_html: { size: 50 }) %>
+  <%= f.input(:force_name_change, collection: [%w[No false], %w[Yes true]], label: "Force Name Change") %>
   <%= f.input(:title, input_html: { size: 50 }) %>
-  <% if can_use_attribute?([:admin, @user], :email) %>
-    <%= f.input(:email, input_html: { size: 50 }) %>
-    <div class="input">
-      <label class="block" for="user_verified">Email Verified</label>
-      <%= select_tag("user[verified]", options_for_select([["Yes", true], ["No", false]], @user.is_verified?)) %>
-    </div>
-  <% end %>
-
-  <div class="input">
-    <label class="block" for="user_enable_privacy_mode">Privacy Mode</label>
-    <%= select_tag("user[enable_privacy_mode]", options_for_select([["Yes", true], ["No", false]], @user.enable_privacy_mode?)) %>
-  </div>
-
+  <%= f.input(:email, input_html: { size: 50 }) %>
+  <%= f.input(:email_verified, as: :select, collection: [%w[No false], %w[Yes true]]) %>
+  <%= f.input(:enable_privacy_mode, as: :select, collection: [%w[No false], %w[Yes true]]) %>
   <%= f.input(:profile_about, as: :dtext, label: "About", limit: FemboyFans.config.user_about_max_size, allow_color: true) %>
   <%= f.input(:profile_artinfo, as: :dtext, label: "Commission Info", limit: FemboyFans.config.user_about_max_size, allow_color: true) %>
   <%= f.input(:base_upload_limit) %>
-
   <%= f.input(:level, collection: user_levels_for_select(@user.level)) %>
   <%= f.input(:unrestricted_uploads, collection: [%w[Yes true], %w[No false]], label: "Unrestricted Uploads") %>
   <%= f.input(:can_approve_posts, collection: [%w[Yes true], %w[No false]], label: "Approve Posts") %>
