Fix sitemap help pages

--- a/app/views/static/site_map.html.erb
+++ b/app/views/static/site_map.html.erb
@@ -68,7 +68,7 @@
   <ul>
     <li><h1>Comments</h1></li>
     <%= li_link_to("Listing", comments_path) %>
-    <%= li_link_to("Help", help_page_path(id: "comments")) %>
+    <%= li_link_to("Help", help_page_path(id: "commenting")) %>
   </ul>
   <ul>
     <li><h1>Forum</h1></li>
