Fix moderator dashboard

--- a/app/views/moderator/dashboards/_activity_user_text_version.html.erb
+++ b/app/views/moderator/dashboards/_activity_user_text_version.html.erb
@@ -4,7 +4,7 @@
     <%= link_to_user(activity.user) %>
   <% end %>
   <% t.column("Count") do |activity| %>
-    <%= link_to(activity.count, user_text_versions_path(search: { updater_id: activity.user.id })) %>
+    <%= link_to(activity.count, moderator_user_text_versions_path(search: { updater_id: activity.user.id })) %>
   <% end %>
 <% end %>
 
