--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -93,16 +93,16 @@
     <h1 style="font-size: 4em;"><%= link_to(FemboyFans.config.app_name, "/") %></h1>
     <div id="links">
       <% if CurrentUser.user.is_anonymous? %>
-        <%= link_to "Login/Signup", new_session_path, title: "Login or sign up" %>
+        <%= link_to("Login/Signup", new_session_path, title: "Login or sign up") %>
       <% else %>
-        <%= link_to "Account", home_users_path, title: "User home" %>
+        <%= link_to("Account", home_users_path, title: "User home") %>
       <% end %>
-      <%= link_to "Posts", posts_path, title: "A paginated list of every post" %>
-      <%= link_to "Comments", comments_path, title: "A paginated list of every comment" %>
-      <%= link_to "Tags", tags_path, title: "A paginated list of every tag" %>
-      <%= link_to "Wiki", show_or_new_wiki_pages_path(title: "help:home"), title: "Wiki" %>
-      <%= link_to "Forum", forum_topics_path, title: "Forum" %>
-      <%= link_to "»", site_map_path, title: "A site map" %>
+      <%= link_to("Posts", posts_path, title: "A paginated list of every post") %>
+      <%= link_to("Comments", comments_path, title: "A paginated list of every comment") %>
+      <%= link_to("Tags", tags_path, title: "A paginated list of every tag") %>
+      <%= link_to("Wiki", show_or_new_wiki_pages_path(title: "help:home"), title: "Wiki") %>
+      <%= link_to("Forum", forums_path, title: "Forum") %>
+      <%= link_to("»", site_map_path, title: "A site map") %>
     </div>
     <div>
       <%= form_tag(posts_path, method: "get") do %>
