--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -7,8 +7,8 @@
     <h3><%= link_to(forum_category.name, forum_category_path(forum_category)) %></h3>
     <p><%= format_text(forum_category.description, allow_color: false) %></p>
   <% end %>
-  <% t.column(:topic_count, name: "Topics") %>
-  <% t.column(:post_count, name: "Posts") %>
+  <% t.column(:topic_count, name: "Topics", th: { class: "topics" }, td: { class: "topics" }) %>
+  <% t.column(:post_count, name: "Posts", th: { class: "posts" }, td: { class: "posts" }) %>
   <% t.column("Last Post") do |forum_category| %>
     <% post = forum_category.posts.order(id: :asc).last %>
     <%= link_to(post.topic.title, forum_topic_path(post.topic)) %><br>
