--- a/app/views/forums/topics/_listing.html.erb
+++ b/app/views/forums/topics/_listing.html.erb
@@ -10,13 +10,13 @@
     <% end %>
 
     <% if CurrentUser.user.go_to_recent_forum_post? && topic.response_count > 1 && (post = topic.posts.select(:id).last) %>
-      <%= link_to topic.title, forum_topic_path(topic, page: topic.last_page, anchor: "forum_post_#{post.id}"), class: "forum-post-link" %>
+      <%= link_to(topic.title, forum_topic_path(topic, page: topic.last_page, anchor: "forum_post_#{post.id}"), class: "forum-post-link") %>
     <% else %>
-      <%= link_to topic.title, forum_topic_path(topic), class: "forum-post-link" %>
+      <%= link_to(topic.title, forum_topic_path(topic), class: "forum-post-link") %>
     <% end %>
 
     <% if topic.last_page > 1 %>
-      <%= link_to "page #{topic.last_page}", forum_topic_path(topic, page: topic.last_page), class: "last-page" %>
+      <%= link_to("page #{topic.last_page}", forum_topic_path(topic, page: topic.last_page), class: "last-page") %>
     <% end %>
 
     <% if topic.is_locked? %>
@@ -36,7 +36,7 @@
       <p><%= time_ago_in_words_tagged(post.created_at, compact: true) %></p>
     <% end %>
   <% end %>
-  <% t.column("Creator", th: { class: "created-at creator" }, td: { class: "creator" }) do |topic| %>
+  <% t.column("Creator", th: { class: "creator" }, td: { class: "creator" }) do |topic| %>
     <%= link_to_user(topic.creator) %>
     <% if policy(topic).can_see_ip_addr? %>
       (<%= link_to_ip(topic.creator_ip_addr) %>)
