--- a/app/views/forums/topics/index.html.erb
+++ b/app/views/forums/topics/index.html.erb
@@ -8,9 +8,9 @@
 
 <p>
   Categories:
-  <%= link_to "All", forum_topics_path %>,
+  <%= link_to("All", forum_topics_path) %>,
   <%= ForumCategory.visible.ordered_categories.all.map { |rec| link_to_unless_current(rec.name, forum_topics_path(search: { category_id: rec.id })) }.join(", ").html_safe %>
-  <%= link_to " »", forums_path %>
+  <%= link_to(" »", forums_path) %>
 </p>
 
 <%= render(partial: "search") %>
