--- a/app/views/dmails/_secondary_links.html.erb
+++ b/app/views/dmails/_secondary_links.html.erb
@@ -8,7 +8,7 @@
   <%= subnav_link_to "Sent", sent_dmails_path %>
   <li>|</li>
   <%= subnav_link_to_if(policy(Dmail).create?, "New", new_dmail_path) %>
-  <%= subnav_link_to_if(policy(Dmail).mark_all_as_read?, "Mark all as read", mark_all_as_read_dmails_path, method: :put) %></li>
+  <%= subnav_link_to_if(policy(Dmail).mark_all_as_read?, "Mark all as read", mark_all_as_read_dmails_path, method: :put, data: { item: "dmails" }) %></li>
   <li>|</li>
   <%= subnav_link_to "Help", help_page_path(id: "dmails") %>
 <% end %>
