--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -20,9 +20,9 @@
       </menu>
       <menu class="secondary <%= "empty" unless content_for(:secondary_links) %>">
         <% if content_for(:secondary_links) %>
-          <%= yield :secondary_links %>
+          <%= yield(:secondary_links) %>
         <% else %>
-          <%= subnav_link_to "Height Placeholder", "" %>
+          <%= subnav_link_to("Height Placeholder", "") %>
         <% end %>
       </menu>
 
