--- a/app/views/forums/posts/search.html.erb
+++ b/app/views/forums/posts/search.html.erb
@@ -1,8 +1,8 @@
-<h1>Search Forum</h1>
+<h1>Search Forum Posts</h1>
 
-<%= render "search" %>
+<%= render(partial: "search") %>
 
-<%= render "forums/topics/secondary_links" %>
+<%= render(partial: "forums/topics/secondary_links") %>
 
 <% content_for(:page_title) do %>
   Search Forum Posts
