--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -16,8 +16,10 @@
   <% t.column(:post_count, name: "Posts", th: { class: "posts" }, td: { class: "posts" }) %>
   <% t.column("Last Post") do |forum_category| %>
     <% post = forum_category.posts.order(id: :asc).last %>
-    <%= link_to(post.topic.title, forum_topic_path(post.topic)) %><br>
-    <%= link_to("Go to post", forum_topic_path(post.topic, page: post.forum_topic_page, anchor: "forum_post_#{post.id}")) %> by <%= link_to_user(post.creator) %>
-    <p><%= time_ago_in_words_tagged(post.created_at, compact: true) %></p>
+    <% if post %>
+      <%= link_to(post.topic.title, forum_topic_path(post.topic)) %><br>
+      <%= link_to("Go to post", forum_topic_path(post.topic, page: post.forum_topic_page, anchor: "forum_post_#{post.id}")) %> by <%= link_to_user(post.creator) %>
+      <p><%= time_ago_in_words_tagged(post.created_at, compact: true) %></p>
+    <% end %>
   <% end %>
 <% end %>
