--- a/app/views/staff_notes/_search.html.erb
+++ b/app/views/staff_notes/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_search path: admin_staff_notes_path, always_display: true do |f| %>
+<%= form_search path: staff_notes_path, always_display: true do |f| %>
   <%= f.user(:creator) %>
   <%= f.user(:updater) %>
   <%= f.user(:user) %>
