--- a/app/views/forums/posts/votes/_add_vote.html.erb
+++ b/app/views/forums/posts/votes/_add_vote.html.erb
@@ -1,6 +1,6 @@
-<%# locals: (forum_post:) -%>
+<%# locals: (forum_post:, show: true) -%>
 
-<li class="forum-post-vote-block">
+<li class="forum-post-vote-block" style="<%= "display: none" unless show %>">
   <%= link_to tag.i(class: "fa-regular fa-thumbs-up"), "#", "title": "Vote up", "class": "forum-vote-up", 'data-forum-id': forum_post.id %>
 
   <%= link_to tag.i(class: "fa-regular fa-face-meh"), "#", "title": "Vote meh", "class": "forum-vote-meh", 'data-forum-id': forum_post.id %>
