--- a/app/views/forums/topics/_form.html.erb
+++ b/app/views/forums/topics/_form.html.erb
@@ -11,6 +11,9 @@
 
     <%= f.simple_fields_for(:original_post) do |pf| %>
       <%= pf.input(:body, as: :dtext, limit: FemboyFans.config.forum_post_max_size) %>
+      <% if policy(forum_topic.original_post).can_use_attribute?(:allow_voting, forum_topic.persisted? ? :create : :update) %>
+        <%= pf.input(:allow_voting, label: "Voting", hint: "Enables voting on the post. This should be used sparingly, and cannot be disabled once enabled.") %>
+        <% end %>
     <% end %>
 
     <% if can_use_attribute?(forum_topic, :is_sticky) %>
