--- a/app/javascript/src/styles/base/_colors.scss
+++ b/app/javascript/src/styles/base/_colors.scss
@@ -159,7 +159,7 @@ $user-home-greeting-color: gold;
 $tag-categories: (
   "0": "general",
   "1": "artist",
-  "2": "voice-actor",
+  "2": "contributor",
   "3": "copyright",
   "4": "character",
   "5": "species",
@@ -172,7 +172,7 @@ $tag-categories: (
 $tag-categories-short: (
   "gen": "general",
   "art": "artist",
-  "va": "voice-actor",
+  "cont": "contributor",
   "copy": "copyright",
   "co": "copyright",
   "char": "character",
