--- a/app/javascript/src/styles/themes/_base.scss
+++ b/app/javascript/src/styles/themes/_base.scss
@@ -88,8 +88,8 @@ body {
   --color-tag-general:            #b4c7d9;
   --color-tag-general-alt:        #2e76b4;
 
-  --color-tag-voice-actor:        #c0c0c0;
-  --color-tag-voice-actor-alt:    #71706e;
+  --color-tag-contributor:        #c0c0c0;
+  --color-tag-contributor-alt:    #71706e;
 
   --color-tag-artist:             #f2ac08;
   --color-tag-artist-alt:         #fbd67f;
