--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -79,7 +79,7 @@
       ["Tag count", "total_tags"],
       ["General tag count", "general_tags", "total_tags"],
       ["Artist tag count", "artist_tags", "total_tags"],
-      ["Voice Actor tag count", "voice_actor_tags", "total_tags"],
+      ["Contributor Actor tag count", "contributor_actor_tags", "total_tags"],
       ["Character tag count", "character_tags", "total_tags"],
       ["Copyright tag count", "copyright_tags", "total_tags"],
       ["Species tag count", "species_tags", "total_tags"],
