--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -40,6 +40,8 @@
       ["MP4 posts", "mp4_posts", "existing_posts"],
       ["Average file size", number_to_human_size(@stats["average_file_size"], precision: 3)],
       ["Total file size", number_to_human_size(@stats["total_file_size"], precision: 3)],
+      ["Posts file size", number_to_human_size(@stats["posts_file_size"], precision: 3)],
+      ["Samples file size", number_to_human_size(@stats["samples_file_size"], precision: 3)],
     ]
   }) %>
 
