Fix allow_voting once more
Also fix issue where /forums/posts/new returned a 403

--- a/app/views/forums/posts/partials/new/_form.html.erb
+++ b/app/views/forums/posts/partials/new/_form.html.erb
@@ -7,6 +7,9 @@
     <%= f.input(:topic_id, label: "Topic ID") %>
   <% end %>
   <%= f.input(:body, as: :dtext, limit: FemboyFans.config.forum_post_max_size) %>
+  <% if policy(forum_post).can_use_attribute?(:allow_voting, :create) %>
+    <%= f.input(:allow_voting, label: "Voting", hint: "Enables voting on the post. This should be used sparingly, and cannot be disabled once enabled.") %>
+  <% end %>
 
   <%= f.button(:submit, "Submit") %>
 <% end %>
