--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -132,7 +132,7 @@
                 hint: "When enabled, clicking on a forum topic will take you to the most recent post.") %>
 
     <%= f.input(:forum_unread_form, label: "Forum Unread Indicator", as: :select, collection: [%w[Bubble bubble], %w[Italic italic], %w[None false]], include_blank: false,
-                hint: "When set to bubble, a red bubble will be shown near \"Forum\" when any topic is unrad. When set to italic, \"Forum\" will be in italic.") %>
+                hint: "When set to bubble, a red bubble will be shown near \"Forum\" when any topic is unread. When set to italic, \"Forum\" will be in italic.") %>
   </fieldset>
 
   <fieldset id="security-settings-section">
