--- a/app/views/forums/posts/partials/edit/_form.html.erb
+++ b/app/views/forums/posts/partials/edit/_form.html.erb
@@ -1,7 +1,9 @@
 <%= error_messages_for("forum_post") %>
 
-<%= custom_form_for(forum_post, policy: policy(forum_post)) do |f| %>
+<%= custom_form_for(forum_post) do |f| %>
   <%= f.input(:body, as: :dtext, limit: FemboyFans.config.forum_post_max_size) %>
-  <%= f.input(:allow_voting, label: "Voting", hint: "Enables voting on the post. This should be used sparingly, and cannot be disabled once enabled.") %>
+  <% if policy(forum_post).can_use_attribute?(:allow_voting, :update) %>
+    <%= f.input(:allow_voting, label: "Voting", hint: "Enables voting on the post. This should be used sparingly, and cannot be disabled once enabled.") %>
+  <% end %>
   <%= f.button(:submit, "Submit") %>
 <% end %>
