minor fixes & seeding changes

--- a/app/views/popular/searches.html.erb
+++ b/app/views/popular/searches.html.erb
@@ -5,7 +5,7 @@
     <%= rank["count"] %>
   <% end %>
   <% t.column("Tag") do |rank| %>
-    <%= link_to(rank["tag"], posts_path(tags: rank["tag"]), class: "category-#{@tags[rank['tag']].try(:category_id) || 0}") %>
+    <%= link_to(rank["tag"], posts_path(tags: rank["tag"]), class: "category-#{@tags[rank['tag']].try(:category) || 0}") %>
   <% end %>
 <% end %>
 
