--- a/app/views/popular/followed_tags.html.erb
+++ b/app/views/popular/followed_tags.html.erb
@@ -5,7 +5,7 @@
     <%= tag.follower_count %>
   <% end %>
   <% t.column("Tag") do |tag| %>
-    <%= link_to(tag.name, posts_path(tags: tag.name), class: "category-#{tag.category_id}") %>
+    <%= link_to(tag.name, posts_path(tags: tag.name), class: "category-#{tag.category}") %>
   <% end %>
 <% end %>
 
