--- a/app/views/posts/partials/show/_options.html.erb
+++ b/app/views/posts/partials/show/_options.html.erb
@@ -46,7 +46,7 @@
     <% end %>
 
     <% if IqdbProxy.enabled? && policy(post).update_iqdb? %>
-      <li><%= link_to("Update IQDB", update_iqdb_post_path(@post), method: :put) %></li>
+      <li><%= link_to("Update IQDB", update_iqdb_post_path(post), method: :put) %></li>
     <% end %>
     <% if policy(post).expunge? %>
       <li><%= tag.a("Destroy", "href": "#", "id": "destroy-post-link", "data-pid": post.id) %></li>
