--- a/app/views/forums/posts/votes/_list.html.erb
+++ b/app/views/forums/posts/votes/_list.html.erb
@@ -3,7 +3,7 @@
 <% own_vote = votes.find { |vote| vote.user == CurrentUser.user } %>
 <% other_votes = votes.reject { |vote| vote.user == CurrentUser.user } %>
 
-<ul class="forum-post-votes-list" id="forum-post-votes-for-<%= forum_post.id %>">
+<ul class="forum-post-votes-list forum-post-votes" id="forum-post-votes-for-<%= forum_post.id %>">
   <% if own_vote %>
     <%= render "forums/posts/votes/vote", vote: own_vote, forum_post: forum_post, votable: votable %>
   <% end %>
@@ -15,4 +15,5 @@
   <% if forum_post.voting_active? && votable && forum_post.creator != CurrentUser.user %>
     <%= render "forums/posts/votes/add_vote", forum_post: forum_post, show: !own_vote %>
   <% end %>
+
 </ul>
