--- a/app/views/tag_relationships/_listing.html.erb
+++ b/app/views/tag_relationships/_listing.html.erb
@@ -1,6 +1,11 @@
 <%# locals: (tag_relations:) -%>
 
 <%= table_for(tag_relations) do |t| %>
+  <% t.column("Votes") do |tag_relation| %>
+    <% if tag_relation.forum_post_id.present? %>
+      <%= render(partial: "forums/posts/votes/overview", locals: { votes: tag_relation.forum_post.votes, forum_post: tag_relation.forum_post }) %>
+    <% end %>
+  <% end %>
   <% t.column("From") do |tag_relation| %>
     <span class="category-<%= tag_relation.antecedent_tag.try(:category) %>">
       <%= link_to_wiki_or_new(tag_relation.antecedent_name) %>
