--- a/app/views/tag_relationships/_search.html.erb
+++ b/app/views/tag_relationships/_search.html.erb
@@ -9,5 +9,5 @@
   <%= f.input(:antecedent_tag_category, label: "From Category", collection: TagCategory.for_select, include_blank: true) %>
   <%= f.input(:consequent_tag_category, label: "To Category", collection: TagCategory.for_select, include_blank: true) %>
   <%= f.input(:status, label: "Status", collection: %w[Approved Active Pending Deleted Retired Processing Queued], include_blank: true) %>
-  <%= f.input(:order, label: "Order", collection: [%w[Status status], ["Recently created", "created_at"], ["Recently updated", "updated_at"], %w[Name name], ["Tag count", "tag_count"]]) %>
+  <%= f.input(:order, label: "Order", collection: [%w[Status status], ["Recently created", "created_at"], ["Recently updated", "updated_at"], %w[Name name], ["Tag count", "tag_count"], ["Highest Rating", "rating_asc"], ["Lowest Rating", "rating_desc"], ["Highest Score", "score_asc"], ["Lowest score", "score_desc"]]) %>
 <% end %>
