fix enhanced thumbnails scrolling

--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -322,6 +322,7 @@ div#c-posts {
         display: grid;
         justify-items: center;
         max-height: 50vh;
+        ovferflow-y: auto;
         @include scrollbars;
       }
     }
